Fixed form overlapping text.

--- a/SandboxService.SemWeb/sandbox.css
+++ b/SandboxService.SemWeb/sandbox.css
@@ -1,6 +1,7 @@
 ﻿@import "reset.css";
 
 body {
+  margin: 10px;
   background: #79A734 url(fade.png) repeat-x;
   font-family: Arial, Helvetica, sans-serif;
   font-size: small;
@@ -8,21 +9,18 @@ body {
 }
 
 div.banner {
-  position: absolute;
   left: 14px;
   top: 14px;
   width: 662px;
 }
 
 div.main {
-  position: absolute;
   left: 14px;
   top: 124px;
   width: 662px;
 }
 
 form {
-  position: absolute;
   left: 10px;
   top: 276px;
   width: 662px;
